# chronos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: astro.hpp  font.hpp  geo.hpp  gfx.hpp  main.cpp  timeutil.hpp  weather.hpp  widget.hpp
src/widgets/: calendar.hpp  card.hpp  clock.hpp  clocks.hpp  location.hpp  moon.hpp  sky.hpp  statusbar.hpp  sun.hpp  weather.hpp
tools/: calpreview.cpp  cardpreview.cpp  fontpreview.cpp
